test/parse-errors/when-without-else.nz.ast.tata
file-ast(
	imports: []
	exports: []
	specs: []
	aliases: []
	structs: []
	funs: [fun-decl(public?: true, sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), void), []), body: when([], none))])
